--- a/.github/workflows/role-assignments.yml
+++ b/.github/workflows/role-assignments.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Azure Login (Service Principal + Secret)
         uses: azure/login@v2
         with:
+          auth-type: service_principal_secret   # <- clave
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
