--- a/.github/workflows/role-assignments.yml
+++ b/.github/workflows/role-assignments.yml
@@ -48,6 +48,7 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+          enable-AzPSSession: true
 
       - name: Ejecutar script de asignación de roles (PowerShell)
         uses: azure/powershell@v2
